--- a/360t7-24.10-6.6.md
+++ b/360t7-24.10-6.6.md
@@ -1,15 +1,29 @@
-#  Immortalwrt 24.10 kernel 6.6 with 237 firmware
+#  Immortalwrt 24.10 BT-R320 6.6 with 237 firmware
 
 ![Badge](https://img.shields.io/badge/build-pass-brightgreen?logo=github)
 
-Software
+ImmortalWrt BT-R320-eMMC
+后台地址：192.168.6.1
+登录账号：root
+登录密码：无
+设备信息：Mediatek-filogic
+设备型号：BT-R320-eMMC
+系统版本：24.10
+内核版本：6.6
+5G高功率：已启用
+默认主题：argon
+主机名：ImmortalWrt
+WIFI名称：
+ 2.4G：ImmortalWrt_2.4G
+ 5G：ImmortalWrt_5G
 
-- luci-app-argon-config
-- luci-app-autoreboot
-- luci-app-easytier
-- luci-app-mosdns
-- luci-app-passwall
-- luci-app-ramfree
-- luci-app-tailscale
-- luci-app-upnp
-- luci-app-wol
+Software
+luci-app-argon-config
+luci-app-autoreboot
+luci-app-easytier
+luci-app-mosdns
+luci-app-iStore
+luci-app-ramfree
+luci-app-tailscale
+luci-app-upnp
+luci-app-wol
