--- a/360t7-24.10-6.6.md
+++ b/360t7-24.10-6.6.md
@@ -10,19 +10,21 @@ ImmortalWrt BT-R320-eMMC
 设备型号：BT-R320-eMMC
 系统版本：24.10
 内核版本：6.6
+Docker   ：已启用
 5G高功率：已启用
-默认主题：argon
+默认主题：Argon
 主机名：ImmortalWrt
 WIFI名称：
- 2.4G：ImmortalWrt_2.4G
- 5G：ImmortalWrt_5G
+ 2.4G：ImmortalWrt_2.4G  无密码
+ 5G：ImmortalWrt_5G  无密码
 
 Software
 luci-app-argon-config
 luci-app-autoreboot
 luci-app-easytier
 luci-app-mosdns
-luci-app-iStore
+luci-app-istore
+luci-app-dockerman
 luci-app-ramfree
 luci-app-tailscale
 luci-app-upnp
